--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "dependencies": {
     "bunyan": "^1.8.1",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "socket.io": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
