--- a/Server/package.json
+++ b/Server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bunyan": "^1.8.1",
     "express": "^4.14.0",
+    "ioredis": "^2.4.0",
     "socket.io": "^1.5.0"
   },
   "devDependencies": {
