--- a/Server/package.json
+++ b/Server/package.json
@@ -11,13 +11,16 @@
   },
   "devDependencies": {
     "eslint-config-guo": "0.0.4",
+    "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
     "nodemon": "^1.11.0"
   },
   "scripts": {
     "start": "export NODE_ENV=production && node src/index.js",
     "dev": "export NODE_ENV=development && nodemon src/index.js | ./node_modules/.bin/bunyan -o short",
-    "lint": "eslint --fix ."
+    "lint": "eslint --fix .",
+    "test": "mocha",
+    "test-cov": "./node_modules/.bin/istanbul cover _mocha"
   },
   "repository": {
     "type": "git",
