--- a/Server/package.json
+++ b/Server/package.json
@@ -7,6 +7,7 @@
     "bunyan": "^1.8.1",
     "express": "^4.14.0",
     "ioredis": "^2.4.0",
+    "lei-coroutine": "^1.3.2",
     "socket.io": "^1.5.0"
   },
   "devDependencies": {
@@ -18,7 +19,7 @@
   "scripts": {
     "start": "export NODE_ENV=production && node src/index.js",
     "dev": "export NODE_ENV=development && nodemon src/index.js | ./node_modules/.bin/bunyan -o short",
-    "lint": "eslint --fix .",
+    "lint": "eslint --fix ./src ./test ",
     "test": "mocha",
     "test-cov": "./node_modules/.bin/istanbul cover _mocha"
   },
